# tablet-driver

./: Cargo.toml  LICENSE  Makefile  config.json  readme.md
configurator/: index.html
configurator/css/: extra.css  theme.css
configurator/js/: editor.js  tablet-client.js
installer/: install.bat  uninstall.bat
scripts/: install.bat  uninstall.bat
src/: main.rs  story_tablet.rs  tablet_handler.rs
src/command/: mod.rs
src/config/: default.json  mod.rs
src/device/: device.json  mod.rs
src/story_tablet/: mod.rs  shared_data.rs
src/tablet/: data.rs  mod.rs  state.rs
