[package]
name = "story-tablet-driver"
version = "0.1.0"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hidapi = "1.2.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.1"
enigo = { version = "0.0.14", features = ["with_serde"] }